test/parser/should_fail/constants.souc.bad
import badimport
import oopsfailure

con = 4
con2 = 5
con = 6
